# New_PINO

./: .gitattributes  .gitignore  CONTEXT.md  DATA.md  LICENSE  pyproject.toml
data/splits/: baseline_split_seed42.json
docs/: baseline-inference-contract.md  baseline-training-protocol.md  data-contract.md
docs/adr/: 0001-baseline-evaluates-interpolation-only.md  0002-use-minimal-independent-material-features.md  0003-keep-baseline-target-in-raw-aeps-space.md  0004-use-canonical-deeponet-dot-product-fusion.md
src/new_pino/: __init__.py  freezing.py  lifecycle.py  preparation.py  reporting.py  training.py
tests/: test_cpu_smoke_training.py  test_fixture_prediction.py  test_fixture_reporting.py  test_grouped_split.py  test_locked_test_evaluation.py  test_source_preflight.py  test_validation_freeze.py
tests/fixtures/prediction_package/: evaluation_fixture.json  package.json
tests/fixtures/prediction_package/runtime_sources/: co_ind.csv  material_properties.md
